# rosbeat

./: Makefile  README.md  config.yml  ingest.py  parse_ros_logs.py  pyproject.toml
rosbeat/: __main__.py  config.py  ingester.py  parser.py
